This is ugly and unclean, but not committing is unhealthy. Status:
* LQT is hanging off the Special:LQ page.

* The meat is in extensions/LQ.php.

* Viewing a thread basically works, as does posting a new message and editing an existing message.

* Errors are not handled, nor are many edge cases.

* It's ugly nasty undocumented and toxic.

* But it works.

* Also modified EditPage to use the new Article::doEdit.

* Monobook has been augmented slightly.

* See the accompanying README.liquidthreads.

Please do not hack this code. It's going to be majorly rewritten
anyways. We need to change EditPage and several other files to give us
more control over redirects, hidden fields, etc.

git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@14861 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -9,6 +9,10 @@
 ** All you guys rock :)
 */
 
+.lqt_post { border: solid 1px #aaa;; margin-top: 0.1in; }
+
+.lqt_begin_replies { margin-left: 0.5in; }
+
 #column-content {
 	width: 100%;
 	float: right;
