Implemented topic lines for top-level posts. Made a nasty hack to EditPage::showEditForm which I may have to retract.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@15460 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -44,6 +44,11 @@ li {
          padding-right: 0.6em;
 }
 
+.lqt_topic_field { 
+         margin-top: 0.5em;
+         margin-bottom: 0.5em;
+ }
+
 .lqt_post .lqt_footer a {
 	color: #5874d1;
 }
