Refactored everything: added lqt_thread table; Thread is now an actual object instead of an illusion. Implemented archiving. Moving posts around doesn't yet work and replying is buggy still, but this is the basis of it
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@15864 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -26,6 +26,19 @@ li {
 	margin-bottom: .1em;
 }*/
 
+.lqt_archive_browser {
+        margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+.lqt_channel_body {
+        background-color: white;
+}
+
+.ns-98 #content {
+        background-color: white;
+}
+
 .lqt_post { border: solid 1px #ddd; margin-top: 0.1in; padding: 0.2em; }
 
 .lqt_post_highlight { border: solid 1px #fabd23; margin-top: 0.1in; padding: 0.2em; }
