folding basically works; not yet pretty
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@15877 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -26,6 +26,10 @@ li {
 	margin-bottom: .1em;
 }*/
 
+.lqt_thread {
+        display: none;
+}
+
 .lqt_archive_browser {
         margin-top: 1em;
 	margin-bottom: 1em;
