Added archive TOC -- for until we get archive search
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@15906 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -26,8 +26,12 @@ li {
 	margin-bottom: .1em;
 }*/
 
-.lqt_thread {
+#lqt_archive_toc {
         display: none;
+}
+
+.lqt_thread {
+//        display: none;
 }
 
 .lqt_archive_browser {
