Massively ad-hoc commit of death. Next up: refactor that will make everything beautiful again.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@16018 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -26,12 +26,20 @@ li {
 	margin-bottom: .1em;
 }*/
 
+#lqt_archive_hide_show {
+        display: block;
+}
+
 #lqt_archive_toc {
         display: none;
 }
 
 .lqt_thread {
 //        display: none;
+}
+
+.lqt_thread_disclosure_triangle {
+        margin-right: 4pt;
 }
 
 .lqt_archive_browser {
