Major rewrite^H^H^H^H^Hfactor. Not everything works; next step is to figure out an API for editpage. New conception of a Thread: a thread now consists of a root post plus zero or more subthreads, as well as metadata. Arbitrary ordering has been cut. It can be added later if it's wanted.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/liquidthreads@16147 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -9,6 +9,11 @@
 ** All you guys rock :)
 */
 
+.bordered {
+  border: solid 1px #ddd;
+  margin: 2em;
+}
+
 /*ul {
 	line-height: 1.5em;
 	list-style-type: square;
