In-progress work on reducing the number of JS and CSS bits that get loaded on separate HTTP requests. This should reduce the time it takes on first visit or log-in by reducing the present 6 (!) wiki-generated hits on *ikipedia to just 2 (one JS, one CSS).
MediaWiki:Common.*, MediaWiki:<skinname>.*, and User:<name>/<skinname>.*
are all combined into the generated output (gen=css / gen=js) along with
whatever little skin config bits there are.

Also, moved common_rtl.css into common.css so it doesn't have to be
loaded separately, using the body's .rtl class as a selector.
Might be nice to do that for Monobook as well.

Have done some cleanup on Skin / SkinTemplate code, but it's still
real scary in there. At the moment, previews of user JS/CSS no longer
work, this will need to be fixed.


git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/branches/consolidate-cssjs-work@16509 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/common/common.css
+++ b/skins/common/common.css
@@ -430,3 +430,21 @@ table.multipageimage td {
 .imagelist .TablePager_col_img_description { white-space: normal }
 .imagelist th.TablePager_sort { background-color: #ccccff }
 
+
+/* Right-to-left workarounds */
+
+/* js pref toc */
+.rtl #preftoc { float: right; }
+/* workaround for moz bug, displayed bullets on left side */
+.rtl #preftoc li { list-style: none; }
+.rtl #prefcontrol { float: right; }
+.rtl fieldset.prefsection,
+.rtl fieldset.operaprefsection { 
+    margin-left: 0;
+    margin-right: 18em;
+}
+/* page history */
+.rtl #pagehistory span.user { 
+    margin-right: 1.4em;
+    margin-left: 0.4em;
+}
